# gsim

./: .gitignore  C-API.md  Cargo.toml  LICENSE.md  README.md  README_CRATES_IO.md  cbindgen.toml  coverage.ps1  gsim.h  pyproject.toml
.github/workflows/: build.yml  tests.yml
benches/: sim.rs
cli/: Cargo.toml
cli/src/: main.rs
dot_export_tests/: simple_gate.dot
import_tests/yosys/: constant_order.json  duplicate_net_ids.json  proc_mux.json  program_counter.json  simple_and_gate.json
python_tests/: component.py  main.py  yosys_import.py
src/: component.rs  components.rs  ffi.rs  id.rs  id_lists.rs  id_vec.rs  import.rs  lib.rs  logic.rs  python_bindings.rs  test.rs  tracing.rs  wire.rs
src/component/: ops.rs
src/ffi/: builder.rs  logic.rs  simulator.rs
src/import/: yosys.rs
src/logic/: alloc.rs  ops.rs  state.rs
src/test/: component.rs  dot_export.rs  import.rs
src/test/import/: yosys.rs
