[package]
name = "gsim"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"
description = "High speed digital logic simulation"
rust-version = "1.73"

[lib]
name = "gsim"
crate-type = ["lib", "cdylib"]

[[bench]]
name = "sim"
harness = false

[features]
yosys-import = ["serde", "dep:serde_json", "dep:indexmap"]
dot-export = []
tracing = ["dep:chrono", "dep:cow-utils"]
c-api = []
python-bindings = ["dep:pyo3"]

[dependencies]
rayon = "1.6"
static_assertions = "1.1"
bounded-integer = { version = "0.5", features = ["types"] }
smallvec = { version = "1.10", features = ["serde", "union", "const_generics"] }
sync-unsafe-cell = "0.1.1"
itertools = "0.11.0"
ahash = { version = "0.8.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
indexmap = { version = "2.1.0", optional = true }
chrono = { version = "0.4.31", optional = true }
cow-utils = { version = "0.1.3", optional = true }
pyo3 = { version = "0.19.0", features = ["auto-initialize", "extension-module", "multiple-pymethods"], optional = true }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[workspace]
resolver = "2"
members = ["cli"]
