[package]
name = "gsim-cli"
version = "0.1.0"
edition = "2024"
authors = ["Mathis Rech"]
license = "MIT"
description = "Command line interface for Gsim"
rust-version = "1.85"

[dependencies]
gsim = { path = "..", features = ["yosys-import"] }
clap = { version = "4.4.18", features = ["derive"] }
reedline-repl-rs = "1.1.1"
directories = "5.0.1"
